# todolist

./: .flaskenv  .gitignore  README.md  data-dev.db  pyproject.toml  requirement.txt  requirements.txt
tests/: conftest.py  test_auth.py  test_cli.py  test_todo.py  test_todolist.py
todolist/: __init__.py  commands.py  config.py  errors.py  ext.py  forms.py  models.py
todolist/blueprints/: __init__.py  auth.py  todo.py
todolist/templates/: base.html  index.html  login.html  modify.html  register.html
todolist/templates/bootstrap/: base.html
todolist/templates/errors/: 404.html  500.html
