[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "This is a todo."
authors = ["zilch <2361018131@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
flask-wtf = "^0.14.3"
flask-login = "^0.5.0"
bootstrap-flask = "^1.5.1"
faker = "^5.6.5"
flask-moment = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
